force-app/main/default/objects/SalesCampaignInfo__c/SalesCampaignInfo__c.object-meta.xml
<CustomObject>
    <description>Not in use, no data</description>
    <label>EU-Sales-Kampagneninfo</label>
    <nameField>
        <displayFormat>SKI-{000000000}</displayFormat>
        <label>Sales-Kampagneninfo-AutoNr</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales-Kampagneninfos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>