force-app/main/default/objects/SalesCampaignInfo__c/fields/Bemerkung__c.field-meta.xml
<CustomField>
    <fullName>Bemerkung__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Bemerkung</label>
    <type>TextArea</type>
</CustomField>