force-app/main/default/objects/SalesCampaignInfo__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <label>Kampagne</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipName>Sales_Kampagneninfos</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>