force-app/main/default/objects/SalesCampaignInfo__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Kontakt</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Sales_Kampagneninfos</relationshipName>
    <type>Lookup</type>
</CustomField>