force-app/main/default/objects/SalesCampaignInfo__c/fields/Customer_additionl_Info__c.field-meta.xml
<CustomField>
    <fullName>Customer_additionl_Info__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Customer needs additional informations about the product</description>
    <label>Zusatzinfo erwünscht</label>
    <type>Checkbox</type>
</CustomField>