force-app/main/default/objects/SalesCampaignInfo__c/fields/Customer_get_Information__c.field-meta.xml
<CustomField>
    <fullName>Customer_get_Information__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Customer will get the Information by post or email</description>
    <label>Zusatzinfo gesandt</label>
    <type>Checkbox</type>
</CustomField>