force-app/main/default/objects/SalesCampaignInfo__c/fields/Customer_Informed__c.field-meta.xml
<CustomField>
    <fullName>Customer_Informed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Customer has received informations about a sales-campagne</description>
    <label>Informiert</label>
    <type>Checkbox</type>
</CustomField>