force-app/main/default/objects/SalesCampaignInfo__c/fields/Customer_No_interest__c.field-meta.xml
<CustomField>
    <fullName>Customer_No_interest__c</fullName>
    <description>Customer has no need or no interest in this product</description>
    <label>Kein Interesse</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>verwendet keine Cages</fullName>
            </value>
            <value>
                <fullName>Instrumente sind schlecht</fullName>
            </value>
            <value>
                <fullName>Implatation ist zu schwierig</fullName>
            </value>
            <value>
                <fullName>Implantat von Konkurrenz ist besser</fullName>
            </value>
            <value>
                <fullName>TM-Material überzeugt nicht</fullName>
            </value>
            <value>
                <fullName>Konkurrenz-Set gekauft</fullName>
            </value>
            <value>
                <fullName>zu teuer</fullName>
            </value>
            <value>
                <fullName>keine Entscheidungsbefugnis</fullName>
            </value>
            <value>
                <fullName>1-Absage</fullName>
            </value>
            <value>
                <fullName>2-Zusage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>