force-app/main/default/objects/SalesCampaignInfo__c/fields/Customer_order__c.field-meta.xml
<CustomField>
    <fullName>Customer_order__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Customer will work with the product</description>
    <label>Bestellung</label>
    <type>Checkbox</type>
</CustomField>