force-app/main/default/objects/SalesCampaignInfo__c/fields/Customer_Test__c.field-meta.xml
<CustomField>
    <fullName>Customer_Test__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Customer will test the product</description>
    <label>Testversuch</label>
    <type>Checkbox</type>
</CustomField>