force-app/main/default/objects/SalesCampaignInfo__c/fields/Customer_Visit__c.field-meta.xml
<CustomField>
    <fullName>Customer_Visit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Customer will be visited in the next 2 Weeks</description>
    <label>Besuch geplant</label>
    <type>Checkbox</type>
</CustomField>