force-app/main/default/objects/SalesCampaignInfo__c/fields/External_Sales_Campaign_Info_ID__c.field-meta.xml
<CustomField>
    <fullName>External_Sales_Campaign_Info_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>External_Sales_Campaign_Info_ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>