force-app/main/default/objects/SalesCampaignInfo__c/fields/Kunde_gewonnen__c.field-meta.xml
<CustomField>
    <fullName>Kunde_gewonnen__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Kunde gewonnen</label>
    <type>Checkbox</type>
</CustomField>